--- a/SITE/css/styles.css
+++ b/SITE/css/styles.css
@@ -52,31 +52,43 @@ footer {
 CSS do slide
 */
 
-.slider {
-    box-decoration-break: inherit;
-    width: auto;
-    height: auto;
-    border-radius: 0;
-    overflow: hidden;
-}
+.slideshow-container {
+    max-width: 1000px;
+    position: relative;
+    top: 130px;
+    left: -50px;
+    margin: auto;
+  }
 
-.slides {
-    width: auto;
-    height: auto;
-    display: flex;
-}
-
-.slide {
-    transition: 2s;
-}
-
-.slide img {
-    width: 800px;
-    height: 400px;
-    transition: all 0.2s ease;
-}
-
-.slides input{
+  .mySlides {
     display: none;
+    animation-name: fade;
+    animation-duration: 1.5s;
+  }
 
-}
+  .prev, .next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    margin-top: -22px;
+    padding: 16px;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: auto;
+  }
+    
+  /* Efeitos de transição */
+  @keyframes fade {
+    from {opacity: .4} 
+    to {opacity: 1}
+  }
+  
+  /* Posicionamento dos botões */
+  .next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+  }
