--- a/SITE/css/styles_SV.css
+++ b/SITE/css/styles_SV.css
@@ -49,6 +49,17 @@ footer {
 }
 
 /*Tabela*/
+
+.cont2 {
+  position: relative;
+  max-width: 100%;
+  top: 5px;
+  left: auto;
+  background-color: rgba(155, 155, 155, 0.11);
+  border:3px solid rgba(255, 255, 255, 0.788);
+  border-radius: 10px;
+}
+
 table {
   border:3px solid rgba(255, 255, 255, 0.788);
   border-radius: 5px;
@@ -57,14 +68,6 @@ table {
   width: 100%;
   height: auto;
   text-align: left;
-}
-
-.cont2 {
-  position: relative;
-  max-width: 100%;
-  top: 10px;
-  left: auto;
-  background: rgba(94, 87, 87, 0.11);
 }
 
 .con1l1{
@@ -91,60 +94,3 @@ table {
   display: block;
   margin: 0 auto;
 }
-
-/* 
-CSS do slide
-*/
-
-
-.slide {
-  max-width: 100%;
-  position: relative;
-  top: 10px;
-  left: auto;
-  background: rgba(94, 87, 87, 0.11);
-  border:3px solid rgba(255, 255, 255, 0.788);
-  border-radius: 5px;
-
-}
-
-.slideshow-container {
-  max-width: 1000px;
-  position: center;
-  margin: auto;
-}
-
-.mySlides {
-  display: none;
-  animation-name: fade;
-  animation-duration: 1.5s;
-}
-
-  .prev, .next {
-    cursor: pointer;
-    position: absolute;
-    top: 26%;
-    width: auto;
-    margin-top: -22px;
-    padding: 5px;
-    color: rgb(100, 99, 99);
-    font-weight: bold;
-    font-size: 50px;
-    transition: 0.6s ease;
-    border:3px solid rgba(255, 255, 255, 0.788);
-    border-radius: 20px;
-    user-select: auto;
-  }
-    
-  /* Efeitos de transição */
-  @keyframes fade {
-    from {opacity: .4} 
-    to {opacity: 1}
-  }
-  
-  /* Posicionamento dos botões */
-  .next {
-    right: 0;
-    border-radius: 1px 0 0 1px;
-    border-radius: 20px;
-  }
