--- a/SITE/css/styles.css
+++ b/SITE/css/styles.css
@@ -43,7 +43,7 @@ footer {
     color: white;
     text-align: center;
     padding: 1rem 0;
-    position: fixed;
+    /*position: fixed;*/
     bottom: 0;
     width: 100%;
 }
@@ -59,6 +59,10 @@ table {
   text-align: left;
 }
 
+.fristtb{
+
+}
+
 .cont2 {
   position: relative;
   max-width: 100%;
@@ -71,6 +75,11 @@ table {
   width: 40%;
   height: auto;
   align-content: center;
+}
+
+.line1{
+  background-color: rgb(255, 254, 254);
+
 }
 
 .img321{
